--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -19,8 +19,8 @@ requirements:
     - pip
 
   run:
-    - python
-    - pytorch
+    - python >=3.9
+    - pytorch >=1.7.0
     - tifffile
     - h5py
     - zarr
@@ -28,11 +28,12 @@ requirements:
     - python-elf
     - python-graphviz
     - scikit-image
-    - bioimageio.core>=0.6.5
+    - bioimageio.core >=0.6.5
     - napari
+    - pyqt
     - requests
     - pyyaml
-    - pydantic>2
+    - pydantic >2
 
 test:
   imports:
