fix(env): Pydantic v2.10 causes bioimageio.spec issues

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
     - pyqt
     - requests
     - pyyaml
-    - pydantic >2
+    - pydantic >2,<2.10  # 2.10 cause problem spec-bioimage-io/issues/663
 
 test:
   imports:
