--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Other
   - requests
   - pyyaml
-  - pydantic>2
+  - pydantic>2,<2.10  # 2.10 cause problem spec-bioimage-io/issues/663
   # Test
   - pytest
   - pytest-qt
