docs: remove unused page and rename "legacy" to "v1"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,22 +116,20 @@ nav:
       - Training: chapters/plantseg_models/training.md
 
   - API:
-      # - chapters/python_api/index.md
       - tasks:
         - plantseg.tasks.io_tasks: chapters/python_api/tasks/io_tasks.md
         - plantseg.tasks.dataprocessing_tasks: chapters/python_api/tasks/dataprocessing_tasks.md
         - plantseg.tasks.segmentation_tasks: chapters/python_api/tasks/segmentation_tasks.md
         - plantseg.tasks.prediction_tasks: chapters/python_api/tasks/prediction_tasks.md
-
       - functionals:
         - plantseg.io: chapters/python_api/functionals/io.md
         - plantseg.functionals.dataprocessing: chapters/python_api/functionals/data_processing.md
         - plantseg.functionals.prediction: chapters/python_api/functionals/cnn_prediction.md
         - plantseg.functionals.segmentation: chapters/python_api/functionals/segmentation.md
-  
-  - PlantSeg Legacy: 
+
+  - PlantSeg v1:
       - chapters/plantseg_legacy/installation.md
-      - PlantSeg Classic GUI:
+      - Classic GUI:
           - chapters/plantseg_legacy/plantseg_classic_gui/index.md
           - Data Processing: chapters/plantseg_legacy/plantseg_classic_gui/data_processing.md
           - Prediction: chapters/plantseg_legacy/plantseg_classic_gui/cnn_prediction.md
