--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches:
       - master
-      - plantsegv2
-      - qy/plantsegv2
+      - qy/add-plantseg-v1-installation
 
 permissions:
   contents: write
@@ -19,6 +18,8 @@ jobs:
       # Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
 
       # Set up Qt libraries (required for PyQt applications)
       - name: Set Up Qt Libraries
