docs(math): docs for image pair operations

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - qy/add-plantseg-v1-installation
+      - qy/mask-pred
 
 permissions:
   contents: write
