--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -15,8 +15,10 @@ build:
 
 requirements:
   build:
-    - python <3.13
+    - python
     - pip
+    - setuptools
+    - wheel
 
   run:
     - python >=3.9
