--- a/.github/workflows/build-and-test-package.yml
+++ b/.github/workflows/build-and-test-package.yml
@@ -62,7 +62,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda activate plant-seg
-          pytest -s --cov --cov-report=xml
+          pytest -sv --cov --cov-report=xml
           conda deactivate
 
       # Upload Codecov report
