--- a/.github/workflows/build-and-test-package.yml
+++ b/.github/workflows/build-and-test-package.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build PlantSeg Package
         shell: bash -l {0}
         run: |
-          conda install -q conda-build
+          conda install -q "conda-build<25"
           conda build -c conda-forge conda-recipe
 
       # Create a Conda environment for testing
