--- a/.github/workflows/build-and-test-package.yml
+++ b/.github/workflows/build-and-test-package.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build PlantSeg Package
         shell: bash -l {0}
         run: |
-          conda install -q "conda-build<25"
+          conda install -q conda-build
           conda build -c conda-forge conda-recipe
 
       # Create a Conda environment for testing
