--- a/.github/workflows/build-and-test-package.yml
+++ b/.github/workflows/build-and-test-package.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build-and-test-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       DISPLAY: ":99.0"
 
