--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - qy/unify-prediction
+      - qy/fix-conda-no-plugin
 
 permissions:
   contents: write
@@ -68,7 +68,7 @@ jobs:
       - name: Build PlantSeg Package
         shell: bash -l {0}
         run: |
-          conda install -q conda-build
+          conda install -q conda-build conda-verify
           conda build -c conda-forge conda-recipe
 
       # Create a Conda environment for PlantSeg
