--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ extend-select = ["I"]
 quote-style = "preserve"
 
 [tool.bumpversion]
-current_version = "2.0.0b4"
+current_version = "2.1.0a0"
 parse = """(?x)
     (?P<major>[0-9]+)               # Major version
     \\.(?P<minor>[0-9]+)            # Minor version
