--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,6 @@ jobs:
         # if: startsWith(github.ref, 'refs/tags/')
         with:
           generate_release_notes: true
+          tag_name: ${{ steps.bump.output.current-version }}
           token: ${{ secrets.GITHUB_TOKEN }}
           make_latest: true
