--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ on:
           - pre_n
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
@@ -39,7 +39,7 @@ jobs:
         # if: startsWith(github.ref, 'refs/tags/')
         with:
           generate_release_notes: true
-          tag_name: ${{ steps.bump.output.current-version }}
-          name: ${{ steps.bump.output.current-version }}
+          tag_name: steps.bump.output.current-version
+          name: 2.0.0b6
           token: ${{ secrets.GITHUB_TOKEN }}
           make_latest: true
