--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
         # if: startsWith(github.ref, 'refs/tags/')
         with:
           generate_release_notes: true
-          tag_name: steps.bump.output.current-version
-          name: 2.0.0b6
+          tag_name: ${{ steps.bump.outputs.current-version }}
+          name: ${{ steps.bump.outputs.current-version }}
           token: ${{ secrets.GITHUB_TOKEN }}
           make_latest: true
