build: pin xarray due to #396

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - qy/fix-conda-no-plugin
+      - qy/pin-xarray-bioimageio-core
 
 permissions:
   contents: write
