--- a/environment-dev-apple.yaml
+++ b/environment-dev-apple.yaml
@@ -18,7 +18,8 @@ dependencies:
   - python-elf
   - python-graphviz
   - scikit-image
-  - bioimageio.core>=0.6.5
+  - bioimageio.core>=0.6.5,<=0.7.0
+  - xarray<2025.3.0  # 2025.3.0 cause problem plant-seg/issues/396
   # GUI
   - pyqt
   - napari
