--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda activate plant-seg-dev
-          pytest -s --cov --cov-report=xml
+          pytest --cov --cov-report=xml --durations=10
           conda deactivate
 
       # Upload Codecov report
