--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
       # Set up Qt libraries (required for PyQt applications)
       - name: Set Up Qt Libraries
-        uses: tlambert03/setup-qt-libs@v1
+        uses: jurplel/install-qt-action@v4
 
       # Start X virtual framebuffer for GUI testing
       - name: Start Xvfb
@@ -56,7 +56,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda activate plant-seg-dev
-          pytest -s --cov --cov-report=xml
+          pytest --cov --cov-report=xml --durations=10
           conda deactivate
 
       # Upload Codecov report
