ci: windows release

--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -2,7 +2,7 @@ name: PlantSeg
 version: "2.0.0b3"
 channels:
   # - file:///home/kriedmiller/software/miniforge3/conda-bld # for local
-  - file:///home/ubuntu_runner/miniconda3/envs/builder/conda-bld # for selfhosted gh actiona
+  - file:///home/ubuntu_runner/miniconda3/envs/builder/conda-bld # [linux]
   # - file:///home/runner/miniconda3/envs/builder/conda-bld # for github-action
   - conda-forge
 specs:
