--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,52 +16,58 @@ on:
           - pre_n
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        # Conda requires a login shell in order to work properly
-        shell: bash -l {0}
-    env:
-      DISPLAY: ":99.0"
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install Qt
-        uses: tlambert03/setup-qt-libs@v1
-
-      # Start X virtual framebuffer for GUI testing
-      - name: Start Xvfb
-        run: |
-          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid \
-          --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
-
-      - name: Set Up Miniforge
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          python-version: 3.11
-          miniforge-version: latest
-          mamba-version: "*"
-          channels: conda-forge
-          environment-file: "environment-dev.yaml"
-          activate-environment: "plant-seg-dev"
-          conda-remove-defaults: true
-
-      - name: List Conda Environments
-        run: conda info --envs
-
-      - name: Run Tests with Pytest
-        run: |
-          conda activate plant-seg-dev
-          pytest -s --cov --cov-report=xml
-          conda deactivate
+  # test:
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       # Conda requires a login shell in order to work properly
+  #       shell: bash -l {0}
+  #   env:
+  #     DISPLAY: ":99.0"
+  #
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Install Qt
+  #       uses: tlambert03/setup-qt-libs@v1
+  #
+  #     # Start X virtual framebuffer for GUI testing
+  #     - name: Start Xvfb
+  #       run: |
+  #         /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid \
+  #         --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
+  #
+  #     - name: Set Up Miniforge
+  #       uses: conda-incubator/setup-miniconda@v3
+  #       with:
+  #         python-version: 3.11
+  #         miniforge-version: latest
+  #         mamba-version: "*"
+  #         channels: conda-forge
+  #         environment-file: "environment-dev.yaml"
+  #         activate-environment: "plant-seg-dev"
+  #         conda-remove-defaults: true
+  #
+  #     - name: List Conda Environments
+  #       run: conda info --envs
+  #
+  #     - name: Run Tests with Pytest
+  #       run: |
+  #         conda activate plant-seg-dev
+  #         pytest -s --cov --cov-report=xml
+  #         conda deactivate
 
   release:
-    needs: test
+    # needs: test
     # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    strategy:
+      matrix:
+        # os: ["ubuntu-latest", "windows-latest"]
+        os: ["windows-latest"]
+    # runs-on: self-hosted
+    runs-on: [self-hosted, "${{ matrix.os }}"]
+
     defaults:
       run:
         # Conda requires a login shell in order to work properly
