--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
     strategy:
       matrix:
         # os: ["ubuntu-latest", "windows-latest"]
-        os: ["windows-latest"]
+        os: ["windows"]
     # runs-on: self-hosted
     runs-on: [self-hosted, "${{ matrix.os }}"]
 
