fix: remove mamba

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
         with:
           python-version: 3.11
           miniforge-version: latest
-          mamba-version: "*"
+          # mamba-version: "*"
           channels: conda-forge
           conda-remove-defaults: true
 
