--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
   #       uses: callowayproject/bump-my-version@master
   #       with:
   #         args: "--verbose ${{ inputs.bump-type }}"
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
+  #         github-token: ${{ secrets.RELEASE_BUMP_MY_VERSION_PAT }}
   #
   #     - name: Check version
   #       if: steps.bump.outputs.bumped == 'true'
